# pure-poc

./: .gitignore  README.md  settings.gradle
adb_scripts/: reset_nfc.sh  reset_nfc2.sh  reset_nfc_sorted.sh  restart.sh
android-app/: AE_notes.md  README.md
android-app/adb_scripts/: adb_wifi_connect.sh  cp_timings.sh  install.sh  nfc.sh  transact.sh  unlock.sh
android-app/stand-alone/adb_scripts/: timings.csv
android-app/stand-alone/card/: build.gradle
android-app/stand-alone/emvextension/: build.gradle
android-app/stand-alone/gradle/wrapper/: gradle-wrapper.properties
android-app/stand-alone/reader/: build.gradle
android-app/stand-alone/reader/src/main/: .AndroidManifest.xml.swp  AndroidManifest.xml
android-app/timings/: process.py
android-app/timings/recorded_timings/: stand-alone.csv
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: ic_launcher_foreground.xml  payment_foreground.xml
emvextension/: build.gradle
emvnfccard/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
pure-uwb/: .gitignore  README.md
pure-uwb/vagrant/: Vagrantfile  bootstrap.sh  install_hex.sh  west.yml
pure-uwb/vagrant/emv_ranging/: .gdb_history  CMakeLists.txt  prj.conf  sample.yaml
pure-uwb/vagrant/emv_ranging/boards/: nrf52dk_nrf52832.overlay
pure-uwb/vagrant/emv_ranging/include/: app_main.h.in
pure-uwb/vagrant/emv_ranging/include/communicate/: communicate.h
pure-uwb/vagrant/emv_ranging/include/range/: range.h
pure-uwb/vagrant/emv_ranging/include/uwb_ranging/: adapter.h  uwb_ranging.h
pure-uwb/vagrant/emv_ranging/release/: zephyr_card.hex  zephyr_terminal.hex
pure-uwb/vagrant/emv_ranging/src/: app_main.c
pure-uwb/vagrant/emv_ranging/src/communicate/: communicate.c
pure-uwb/vagrant/emv_ranging/src/range/: range.c
pure-uwb/vagrant/emv_ranging/src/uwb_ranging/: uart_adapter.c  uwb_ranging.c
stand-alone/: .gitignore  settings.gradle
stand-alone/adb_scripts/: cp_timings.sh  restart.sh  timings2.csv
stand-alone/card/src/main/: AndroidManifest.xml
timings/recorded_timings/: prerecorded.csv
(+292 files in other folders)
